--- a/www/index.html
+++ b/www/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="initial-scale=1, 
               maximum-scale=1, user-scalable=no, width=device-width">
 
-        <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+        <!--<link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/ionic/1.1.1/css/ionic.min.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
 
-        <script src="lib/ionic/js/ionic.bundle.js" type="text/javascript"></script>
+        <!--<script src="lib/ionic/js/ionic.bundle.js" type="text/javascript"></script>-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/ionic/1.1.1/js/ionic.bundle.min.js" type="text/javascript"></script>
 
         <script src="js/app.js"></script>
         <script src="js/controller.js" type="text/javascript"></script>
